Update branding to Eriprime; modify favicon and manifest files; adjust privacy policy and terms; enhance logo component; update meta tags and page titles for consistency

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Consult Solutions" />
+    <meta name="apple-mobile-web-app-title" content="Eriprime" />
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
     
     <!--  -->
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Consult Solutions</title>
+    <title>Eriprime</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
